# Keovil

./: .dockerignore  .env  .gitignore  AGENTS.md  Dockerfile  Dockerfile.base  LICENSE  README.md  chat.py  compile.py  docker-compose.yml  entrypoint.sh  installer.sh  pyproject.toml  requirements.txt  setup.py
.convos/bdcc2a67-7607-4f70-871f-c231cc1abafb/: 1765519308_de5ef2_saved.json
src/: __init__.py  chunker_test.py  colbert_engine.py  college_rag.py  intelligent_rag_chunker.py  knowledge_engine.py  neural_db.py  rag_engine.py
src/agents/: csv_agent.py  db_agent.py  sql_agent.py
src/keovil/: __init__.py  chunker.py  colbert.py  config.py  rag.py
src/keovil/agents/: db_agent.py
src/keovil/utils/: __init__.py  document_processor.py  llm_config.py  model_engine.py
src/keovil_web/: __main__.py  app.py  college_rag.py  server.py
src/keovil_web/static/css/: activate.css  chat.css  data_chat.css  explorer.css  index.css  settings.css
src/keovil_web/static/js/: activate.js  chat.js  data_chat.js  explorer.js  settings.js
src/keovil_web/templates/: activate.html  chat.html  data_chat.html  explorer.html  index.html  settings.html  setup.html
src/rag_chat/: app.py
src/rag_chat/templates/: chat.html  data_chat.html  explorer.html  index.html  settings.html
src/utils/: document_processor.py  file_collector.py  model_engine.py
test/: about_me.txt  company_data.txt  employee_data.txt
tests/: test_rag_agent.py  test_sql_agent.py
