[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keovil"
version = "0.1.0"
description = "Private RAG System for Documents & Structured Data"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "kaiserkonok", email = "kaiserkonok@example.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-classic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=1.0.0",
    "qdrant-client>=1.12.0",
    "pylate>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "python-pptx>=0.6.23",
    "markdown>=3.6",
    "watchdog>=4.0.0",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "docling>=2.7.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "duckdb>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/kaiserkonok/Keovil"
Repository = "https://github.com/kaiserkonok/Keovil"

[tool.setuptools.packages.find]
where = ["src"]
